# friendly-retail-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .coverage  Dockerfile  README.md  pyproject.toml  test.db
backend/app/: embeddings.py  main.py  models.py  redis_client.py  seed.py  seed_embeddings.py  summarizer.py
conductor/: product-guidelines.md  product.md  tech-stack.md  track_suggestions.md  tracks.md
conductor/archive/add_apparel_seed_20260101/: metadata.json  spec.md
conductor/archive/add_eruda_20260101/: metadata.json  spec.md
conductor/archive/ai_integration_20260101/: spec.md  (+1 more)
frontend/: Dockerfile  Dockerfile.dev  README.md  minimal_ai_agent_interface.html  package-lock.json  package.json
tests/backend/: test_agent_logic.py  test_agent_tools.py  test_automatic_sync.py  test_chat.py  test_chat_request_model.py  test_compress_history.py  test_cors.py  test_dependencies.py  test_embedding_service.py  test_end_to_end_search.py  test_fix_phase_1.py  test_fix_phase_2.py  test_fix_phase_3.py  test_main.py  test_models.py  test_multi_turn_chat.py  test_multi_turn_streaming.py  test_product_embedding.py  test_products.py  test_redis_client.py  test_redis_history.py  test_search.py  test_seeding_logic.py  test_semantic_search_tool.py  test_serialization.py  test_stateful_chat.py  test_streaming_chat.py  test_summarization_integration.py  test_summarizer.py
tests/verification/: verify_docker_setup.sh  verify_frontend_scaffold.sh  verify_phase_1.sh  verify_phase_2.sh  verify_phase_3.sh  verify_phase_4.sh  verify_redis_lib.py  verify_summarization.sh
(+59 files in other folders)
